# isamedia

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md  release-plz.toml
.github/workflows/: ci.yml  conventions.yml  cross-os.yml  release-plz.yml  release.yml
contrib/mpv/: README.md  input.conf  mpv.conf
contrib/mpv/script-opts/: modernz.conf
contrib/mpv/scripts/: modernz.lua  skip_button.lua
src/: app.rs  cli.rs  config.rs  event.rs  lang.rs  main.rs  net.rs  secrets.rs  shell.rs
src/apps/: auto_search.rs  coming_soon.rs  delete_prompt.rs  downloads.rs  mod.rs  settings.rs
src/apps/jellyfin/: browse.rs  login.rs  mod.rs  msg.rs
src/apps/radarr/: browse.rs  mod.rs  msg.rs  setup.rs
src/apps/sonarr/: browse.rs  mod.rs  msg.rs  setup.rs
src/arr/: display.rs  mod.rs  models.rs
src/jellyfin/: display.rs  mod.rs  models.rs  url.rs
src/player/: ipc.rs  mod.rs  supervisor.rs  ticks.rs
src/radarr/: display.rs  mod.rs  models.rs
src/sonarr/: display.rs  mod.rs  models.rs
src/ui/: form.rs  help.rs  input.rs  list.rs  mod.rs  picker.rs  prompt.rs  text.rs  theme.rs  theme_picker.rs
