[package]
name = "isamedia"
version = "0.1.2"
edition = "2024"
license = "MIT"
# Publishing to crates.io is disabled in .github/release-plz.toml
# (publish = false), NOT here. A `publish = false` in this manifest marks the
# package non-publishable, which makes release-plz skip creating the git tag
# and GitHub release entirely (its release step only tags publishable crates).
# Keep this manifest publishable so release-plz can tag; the toml still blocks
# the actual crates.io publish.

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
gethostname = "1.1.0"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util", "net"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["json", "fmt"] }
unicode-width = "0.2.2"
uuid = { version = "1.23.4", features = ["v4"] }

# TLS backend per platform: rustls on unix; on Windows the OS-native schannel
# (via native-tls), which cross-compiles without a C toolchain.
[target.'cfg(unix)'.dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "http2", "query"] }

[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["json", "native-tls", "http2", "query"] }
keyring = { version = "3", features = ["windows-native"] }

# Secrets (token/password) live in the OS keyring, not the config file.
# vendored: build libdbus from source so no -dev package is needed.
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
